--- a/weatherApp/package.json
+++ b/weatherApp/package.json
@@ -31,8 +31,12 @@
     "@react-native-community/eslint-config": "1.1.0",
     "babel-jest": "25.5.1",
     "eslint": "6.8.0",
+    "eslint-config-prettier": "^7.1.0",
+    "eslint-plugin-prettier": "^3.3.1",
+    "eslint-plugin-react": "^7.22.0",
     "jest": "25.5.4",
     "metro-react-native-babel-preset": "0.59.0",
+    "prettier": "^2.2.1",
     "react-test-renderer": "16.13.1"
   },
   "jest": {
