--- a/weatherApp/package.json
+++ b/weatherApp/package.json
@@ -16,6 +16,7 @@
     "@react-navigation/stack": "^5.12.8",
     "@reduxjs/toolkit": "^1.5.0",
     "isomorphic-fetch": "^3.0.0",
+    "moment": "^2.29.1",
     "react": "16.13.1",
     "react-native": "0.63.4",
     "react-native-gesture-handler": "^1.9.0",
